Adiciona post sobre o primeiro curso de robótica de 2016

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Woquiton.Tech # the main title
 
-tagline: Education. Technology. Inclusion. # it will display as the subtitle
+tagline: Technology. Education. Inclusion. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Um espaço onde tecnologia, educação e inclusão se encontram para transformar realidades e inspirar novas possibilidades.
